# perceptron-tkhm-fullstack

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  constants.py  docker-compose.yml  install.sh  main.py  pyproject.toml  requirements.txt
config/: ai_config.py  langchain_config.py  log_config.py  pinecone_config.py  typing_config.py
data/: weather_code.json
filter/: finder.py  typing.py
utils/: finder.py
